[gd_scene load_steps=3 format=2]

[ext_resource path="res://example/leaderboards.gd" type="Script" id=1]
[ext_resource path="res://example/resources/theme.tres" type="Theme" id=2]

[node name="Leaderboards" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelTitle" type="Label" parent="VBoxContainer"]
margin_right = 720.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Leaderboards"
align = 1
valign = 1

[node name="LineEditLeaderboardsOutput" type="LineEdit" parent="VBoxContainer"]
margin_top = 75.0
margin_right = 720.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
virtual_keyboard_enabled = false
placeholder_text = "Output"
caret_blink = true
caret_blink_speed = 0.5

[node name="LabelEndpoints" type="Label" parent="VBoxContainer"]
margin_top = 151.0
margin_right = 720.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Endpoints"
align = 1
valign = 2

[node name="ButtonShowAllLeaderboards" type="Button" parent="VBoxContainer"]
margin_top = 226.0
margin_right = 720.0
margin_bottom = 298.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Show All Leaderboards"
expand_icon = true

[node name="ButtonShowLeaderboard" type="Button" parent="VBoxContainer"]
margin_top = 302.0
margin_right = 720.0
margin_bottom = 373.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Show Leaderboard (LId)"
expand_icon = true

[node name="ButtonShowLBForTS" type="Button" parent="VBoxContainer"]
margin_top = 377.0
margin_right = 720.0
margin_bottom = 449.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Show LB For TS (LId, TSpan)"
expand_icon = true

[node name="ButtonShowLBForTSAndCollection" type="Button" parent="VBoxContainer"]
margin_top = 453.0
margin_right = 720.0
margin_bottom = 524.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Show LB For TS And Coll (LId, TSpan, Coll)"
expand_icon = true

[node name="ButtonSubmitScore" type="Button" parent="VBoxContainer"]
margin_top = 528.0
margin_right = 720.0
margin_bottom = 600.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Submit Score (LId, Score)"
expand_icon = true

[node name="ButtonLoadPlayerScore" type="Button" parent="VBoxContainer"]
margin_top = 604.0
margin_right = 720.0
margin_bottom = 675.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Load Player Score (LId, TSpan, Coll)"
expand_icon = true

[node name="ButtonLoadAllLeaderboards" type="Button" parent="VBoxContainer"]
margin_top = 679.0
margin_right = 720.0
margin_bottom = 751.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Load All Leaderboards (ForceReload)"
expand_icon = true

[node name="ButtonLoadLeaderboard" type="Button" parent="VBoxContainer"]
margin_top = 755.0
margin_right = 720.0
margin_bottom = 826.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Load Leaderboard (LId, ForceReload)"
expand_icon = true

[node name="LabelParameters" type="Label" parent="VBoxContainer"]
margin_top = 830.0
margin_right = 720.0
margin_bottom = 902.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Parameters"
align = 1
valign = 2

[node name="LineEditLeaderboardId" type="LineEdit" parent="VBoxContainer"]
margin_top = 906.0
margin_right = 720.0
margin_bottom = 977.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "CgkIy_Lnrp4ZEAIQDg"
align = 1
placeholder_text = "Leaderboard Id (LId)"
caret_blink = true
caret_blink_speed = 0.5

[node name="SpinBoxScore" type="SpinBox" parent="VBoxContainer"]
margin_top = 981.0
margin_right = 720.0
margin_bottom = 1053.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1e+10
value = 10.0
rounded = true
align = 1
suffix = "Score"

[node name="CheckButtonLeaderboardsForceReload" type="CheckButton" parent="VBoxContainer"]
margin_top = 1057.0
margin_right = 720.0
margin_bottom = 1128.0
size_flags_horizontal = 3
size_flags_vertical = 3
pressed = true
text = "Force Reload"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 1132.0
margin_right = 720.0
margin_bottom = 1204.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 356.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 2.0
text = "Timespan (TSpan):"
valign = 1

[node name="HSliderTimespan" type="HSlider" parent="VBoxContainer/HBoxContainer"]
margin_left = 360.0
margin_right = 538.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 2.0
value = 2.0
rounded = true

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 542.0
margin_right = 720.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = " Daily/Weekly/All"
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 1208.0
margin_right = 720.0
margin_bottom = 1280.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 356.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 2.0
text = "Collection (Coll):"
valign = 1

[node name="HSliderLeaderboardsCollection" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
margin_left = 360.0
margin_right = 538.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 3.0
step = 3.0
rounded = true

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 542.0
margin_right = 720.0
margin_bottom = 72.0
size_flags_horizontal = 3
size_flags_vertical = 5
text = " Public/Friends "
valign = 1

[connection signal="pressed" from="VBoxContainer/ButtonShowAllLeaderboards" to="." method="_on_ButtonShowAllLeaderboards_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonShowLeaderboard" to="." method="_on_ButtonShowLeaderboard_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonShowLBForTS" to="." method="_on_ButtonShowLBForTS_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonShowLBForTSAndCollection" to="." method="_on_ButtonShowLBForTSAndCollection_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonSubmitScore" to="." method="_on_ButtonSubmitScore_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonLoadPlayerScore" to="." method="_on_ButtonLoadPlayerScore_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonLoadAllLeaderboards" to="." method="_on_ButtonLoadAllLeaderboards_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonLoadLeaderboard" to="." method="_on_ButtonLoadLeaderboard_pressed"]
